--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node-terminal",
-            "name": "Run Script: start",
+            "type": "node",
             "request": "launch",
-            "command": "npm run start",
-            "cwd": "${workspaceFolder}"
+            "name": "Launch Program",
+            "program": "${workspaceFolder}\\src\\app.js",
+            "preLaunchTask": "tsc: build - tsconfig.json",
+            "outFiles": [
+                "${workspaceFolder}/src/**/*.js"
+            ]
         }
     ]
 }
