--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/express-serve-static-core": "4.17.28",
-    "@types/node": "14.14.21"
+    "@types/node": "14.14.21",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=12.0.0"
