--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
 		"lib": ["ES2017", "DOM"],
 		"outDir": "src",
 		"sourceMap": true,
+		"skipLibCheck": true,
+		"incremental": true,
 		"experimentalDecorators": true
 	},
 	"exclude": [
